Fixed the scripted peace for the SCA

--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -767,8 +767,8 @@
   SCA12desc:0 "Some call it “victory pork" but it doesn’t hide the reality of the situation; the people are eating squirrel. The lack of food stores and a rocky start to agriculture has led to mass starvation in the Butlerite territory. Rations have been cut and the people are prepared for a long winter.\n\nButler has likened it to valley forge but the situation is seeming just as dire as the first failed revolution." 
   SCA12opta:0 "Hopefully This Is The Last Time We Tighten Our Belts."
   SCA13title:0 "War Plan: Oil"
-  SCA13desc:0 "" 
-  SCA13opta:0 ""
+  SCA13desc:0 "The worst of the worst. A state created purely to strangle the working men and women of America. How dare they. Though these innocent people shall not fear, as we come as liberators, not conquerors.\n\nBoomtown is rich in oil. Founded after oil tycoons left the United Commomwealth to avoid the ever-increasing harsh taxation standards imposed by the poisoned bureaucracy of America. The famous of all these people being the Rockefeller family. The state has now prospered into a so called capitalist utopia, or so they think. While on the surface Boomtown may look like a lost city of gold in actuality it is ripe with disease and crime, and it needs a good, thorough clean." 
+  SCA13opta:0 "No Mercy For These Pigs"
   SCA14title:0 "War Plan: Freedom"
   SCA14desc:0 "" 
   SCA14opta:0 ""
@@ -783,18 +783,18 @@
   SCA17title:0 "A Red Army"
   SCA17desc:0 "" 
   SCA17opta:0 ""
-  SCA18title:0 "A New Prophet?"
+  SCA18title:0 "A New Prophet?" # not used for anything
   SCA18desc:0 "" 
   SCA18opta:0 "The Peoples Vanguard"
   SCA18optb:0 "The Young Continental Army"
   SCA18optc:0 "The Federative Union"
-  SCA19title:0 "The Most Radical Of All"
+  SCA19title:0 "The Most Radical Of All" # not used for anything
   SCA19desc:0 "" 
   SCA19opta:0 ""
-  SCA20title:0 "One Leader, One Nation"
+  SCA20title:0 "One Leader, One Nation" # not used for anything
   SCA20desc:0 "" 
   SCA20opta:0 ""
-  SCA21title:0 "A Fair Revolution"
+  SCA21title:0 "A Fair Revolution" # not used for anything
   SCA21desc:0 "" 
   SCA21opta:0 ""
   SCA22title:0 "Talks In Salt Lake City"
@@ -803,14 +803,14 @@
   SCA23title:0 "Talks In Boomtown"
   SCA23desc:0 "" 
   SCA23opta:0 ""
-  SCA24title:0 "An American Ally?"
+  SCA24title:0 "An American Ally?" # not used for anything
   SCA24desc:0 "" 
   SCA24opta:0 "Of Course"
   SCA24optb:0 "We Have No Interests In Their Affairs"
-  SCA25title:0 "Mexico Accepts"
+  SCA25title:0 "Mexico Accepts" # not used for anything
   SCA25desc:0 "" 
   SCA25opta:0 "Wonderful News"
-  SCA26title:0 "Mexico Refuses"
+  SCA26title:0 "Mexico Refuses" # not used for anything
   SCA26desc:0 "" 
   SCA26opta:0 "What!"
   SCA27title:0 "The Sounds Of War" # - This loc is being done by someone else
@@ -839,6 +839,12 @@
   SCA34title:0 "A Red America"
   SCA34desc:0 "" 
   SCA34opta:0 "We Fucking Did It"
+  SCA35title:0 "In The Belly Of The Beast"
+  SCA35desc:0 "" 
+  SCA35opta:0 "Our Survival Comes First"
+  SCA36title:0 "Safe And Sound"
+  SCA36desc:0 "" 
+  SCA36opta:0 "We Live In The Shadows, For Now"
 
 
 
