Formatting and Loc fixes
-Megacities formatting fix
-general loc fixes

--- a/localisation/PB_Maratha_l_english.yml
+++ b/localisation/PB_Maratha_l_english.yml
@@ -31,7 +31,7 @@ PB_MAR_PIC_aggression_desc:0 "\n\n\n\n\n\nAs the days pass by, the many people o
 PB_PIC_attack:0 "PILM Attack"
 PB_PIC_attack_desc:0 "The PILM (Pan-Indian Liberation Militia) has been the suspect of several attacks on the cities of Bombay, Delhi and Lashkar. Led by Rash Behari Bose, this branch of the PIC has been notably jacobin and revolutionary, distancing themselves from the main political organs of the PIC by applauding the Japanese revolution and fearing European liberalism as another tool of imperialism and colonialism. Their war on the monarchy has been rather unpopular, as they have killed innocent bystanders in the past. The PIC have recently distanced the party from the militia, but ties are still keeping the two together."
 MAR_RANDOM_EVENT:0 "§RThe PILM will have prepared an attack against our government after 20 days§!"
-MAR_COLLAPSE_TOOLTIP:0 "§YWith the breaking down of the Delhi negotiations and the refusal of Jivajirao Scindai to abdicate, the country is thrown into chaos and the PIC has declared an end to the archaic monarchy.§!
+MAR_COLLAPSE_TOOLTIP:0 "§YWith the breaking down of the Delhi negotiations and the refusal of Jivajirao Scindai to abdicate, the country is thrown into chaos and the PIC has declared an end to the archaic monarchy.§!"
 MAR_Diplomatic_Effort:0 "Diplomatic Efforts"
 MAR_Diplomatic_Effort_desc:0 "To maintain unity we must reach out to those with differing opinions else we meet a bloody fate. Though remember, there can be no §Rcompromise§!"
 
@@ -74,7 +74,7 @@ MAR_ss_party:0 "ABK/PIC"
 MAR_jc_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
 MAR_jc_party:0 "ABK/PIC"
 MAR_an_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
-MAR_an_party:0 "ABK/PIC"`
+MAR_an_party:0 "ABK/PIC"
 
 IRP_lb_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
 IRP_lb_party:0 "ABK/PIC"
