the Turkish man in France

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -669,6 +669,14 @@
   FRA_Economic_Influence_Moderate:0 "Significant French Economic Influence"
   FRA_Economic_Influence_High:0 "Pervasive French Economic Influence"
 
+  PB_FRA_the_road_to_employment:0 "The Road to Employment"
+  PB_FRA_the_road_to_employment_desc:0 "haha git a job idiot\nUnemployment Percentage: §Y[?FRA_unemployment_variable]%§!"
+  PB_FRA_invest_in_infrastructure:0 "Invest in Infrastructure"
+  PB_FRA_heavily_invest_in_infrastructure:0 "Heavily invest in Infrastructure"
+  PB_FRA_invest_in_military_factories:0 "Invest in Military Factories"
+  PB_FRA_heavily_invest_in_military_factories:0 "Heavily Invest in Military Factories"
+  PB_FRA_hunt_for_unions:0 "Hunt for Unions"
+
   ##########################
   # TOOLTIPS
   ##########################
@@ -693,6 +701,15 @@
   FRA_A_Beating_Heart_For_France_TT:0 "\n§gAt the outbreak of the war this national spirit will be removed§!"
 
   FRA_available_tech_team:0 "Available §YTech Team§!:\n"
+
+  PB_FRA_unemployment_variable_minus0.1_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.1%§!"
+  PB_FRA_unemployment_variable_minus0.25_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.25%§!"
+  PB_FRA_unemployment_variable_minus0.5_tt:0 "Our Unemployment will §Gdecrease§! by §Y0.5%§!"
+  PB_FRA_unemployment_variable_minus1_tt:0 "Our Unemployment will §Gdecrease§! by §Y1%§!"
+  PB_FRA_unemployment_variable_plus0.1_tt:0 "Our Unemployment will §Rincrease§! by §Y0.1%§!"
+  PB_FRA_unemployment_variable_plus0.25_tt:0 "Our Unemployment will §Rincrease§! by §Y0.25%§!"
+  PB_FRA_unemployment_variable_plus0.5_tt:0 "Our Unemployment will §Rincrease§! by §Y0.5%§!"
+  PB_FRA_unemployment_variable_plus1_tt:0 "Our Unemployment will §Rincrease§! by §Y1%§!"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
