--- a/localisation/PB_Hungary_l_english.yml
+++ b/localisation/PB_Hungary_l_english.yml
@@ -35,6 +35,8 @@
  # FOCUS
  #######################
 
+ HUN_bohm_resigns:0 "The Great Founder Resigns" 
+ HUN_bohm_resigns_desc:0 "The Great Founder Resigns" 
 
  ##########################
  # RELEASABLES
