--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -605,6 +605,33 @@
   PB_FRA_Reform_Military_Mass_Mobilization_Scorched_Earth:0 "Scorched Earth"
   PB_FRA_Reform_Military_Mass_Mobilization_Long_war:0 "Focus on the Long War"
 
+  PB_FRA_Guerre_Eclair:0 "Guerre éclair"
+  PB_FRA_Conceptualize_The_Landship:0 "Conceptualize The Landship"
+  PB_FRA_Artillery_Improvements:0 "Artillery Improvements"
+
+  PB_FRA_Reform_Military_Navy:0 "The Marine Nationale"
+  PB_FRA_Jeune_ecole:0 "Jeune École"
+  PB_FRA_Flotte_en_etre:0 "Flotte en Être"
+  PB_FRA_Wolf_Pack_Theories:0 "Wolf Pack Theories"
+  PB_FRA_Trade_Interdiction:0 "Trade Interdiction"
+  PB_FRA_New_Models:0 "New Models"
+  PB_FRA_Destroyer_Improvements:0 "Destroyer Improvements"
+  PB_FRA_Positioning_Manuals:0 "Positioning Manuals"
+  PB_FRA_Offshore_Maneuvers:0 "Offshore Maneuvers"
+  PB_FRA_Ghosts_In_The_Sea:0 "Ghosts In The Sea"
+  PB_FRA_Dockyard_Expansions:0 "Dockyard Expansions"
+  PB_FRA_Port_Expansions:0 "Port Expansions"
+  PB_FRA_Defense_Manuals:0 "Defense Manuals"
+  PB_FRA_Further_Dockyard_Expansions:0 "Further Dockyard Expansions"
+  PB_FRA_Production_Streamlining:0 "Production Streamlining"
+  PB_FRA_Beasts_Of_The_Sea:0 "Beasts Of The Sea"
+  PB_FRA_A_Navy_To_Match:0 "A Navy To Match"
+  PB_FRA_Capital_Ship_Initiatives:0 "Capital Ship Initiatives"
+  PB_FRA_Cruiser_Efforts:0 "Cruiser Efforts"
+  PB_FRA_Offensive_Manuals:0 "Offensive Manuals"
+  PB_FRA_Invest_In_Carriers:0 "Invest In Carriers" 
+  PB_FRA_France_Rule_The_Waves:0 "France Rule The Waves"
+
   ##########################
   # FRENCH DECISIONS
   ##########################
@@ -713,6 +740,9 @@
   PB_FRA_unemployment_variable_plus1_tt:0 "Our Unemployment will §Rincrease§! by §Y1%§!"
 
   FRA_Unemployment_Variable_Less_Than_One:0 "Our Unemployment is less than §Y1%§!"
+
+  FRA_Unit_Leader_Attack:0 "Every §YUnit Leader§! Will Gain One Attack Skill Level"
+  FRA_Unit_Leader_Defense:0 "Every §YUnit Leader§! Will Gain One Defense Skill Level"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
