--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -579,7 +579,7 @@
   PB_FRA_War_Devotion:0 "Devotion to the War Effort"
 
   PB_FRA_Reform_Military:0 "Reform the Military"
-  PB_FRA_Reform_Military_Army:0 "The Armée de terre"
+  PB_FRA_Reform_Military_Army:0 "The Armée de Terre"
   PB_FRA_Reform_Military_Lightning_War:0 "Foudre de Guerre"
   PB_FRA_Reform_Military_Mass_Mobilization:0 "Doctrine sur les Inondations"
 
@@ -631,6 +631,23 @@
   PB_FRA_Offensive_Manuals:0 "Offensive Manuals"
   PB_FRA_Invest_In_Carriers:0 "Invest In Carriers" 
   PB_FRA_France_Rule_The_Waves:0 "France Rule The Waves"
+
+  PB_FRA_Reform_Military_Air:0 "Armée de l'Air"
+  PB_FRA_Superiorite_aerienne:0 "Supériorité Aérienne"
+  PB_FRA_Destruction_stragetique:0 "Destruction Stragétique"
+  PB_FRA_Doctrine_Planning:0 "Doctrine Planning"
+  PB_FRA_Airfield_Expansions:0 " Airfield Expansions"
+  PB_FRA_Ace_Initiatives:0 "Ace Initiatives"
+  PB_Radar_Investments:0 "Radar Investments"
+  PB_Anti_Air_Investments:0 "Anti Air Investments"
+  PB_FRA_She_Who_Dies:0 "She Who Dies"
+  PB_FRA_Increase_Fighter_Development_Funding:0 "Increase Fighter Development Funding"
+  PB_FRA_Increase_CAS_Development_Funding:0 "Increase CAS Development Funding"
+  PB_FRA_General_Production_Efficiencies:0 "General Production Efficiencies"
+  PB_Kings_Of_The_Sky:0 "Kings Of The Sky"
+  PB_FRA_Air_Ambitions:0 "Air Ambitions"
+  PB_FRA_Aluminum_Processing:0 "Aluminum Processing"
+  PB_FRA_Pilot_Discipline:0 "Pilot Discipline"
 
   ##########################
   # FRENCH DECISIONS
