--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -648,6 +648,13 @@
   PB_FRA_Air_Ambitions:0 "Air Ambitions"
   PB_FRA_Aluminum_Processing:0 "Aluminum Processing"
   PB_FRA_Pilot_Discipline:0 "Pilot Discipline"
+  PB_FRA_Increase_Bomber_Development_Funding:0 "Increase Bomber Development Funding"
+  PB_FRA_Increase_Heavy_Fighter_Development_Funding:0 "Increase Heavy Fighter Development Funding"
+  PB_FRA_Air_Games:0 " Air Games"
+  PB_FRA_Increase_Production_Capabilities:0 "Increase Production Capabilities"
+  PB_FRA_Bombs_Away:0 "Bombs Away"
+  PB_FRA_Devastate_Their_Lands:0 "Devastate Their Lands"
+  PB_FRA_Barons_Of_Hell:0 "Barons Of Hell"
 
   ##########################
   # FRENCH DECISIONS
