GFX Fixes and Infantry Tech

--- a/localisation/PB_equipment_l_english.yml
+++ b/localisation/PB_equipment_l_english.yml
@@ -186,6 +186,14 @@
 
  FRA_infantry_equipment_0:0 "Fusil semi-automatique M.1919"
  FRA_infantry_equipment_0_short:0 "MAS-1919"
+ FRA_infantry_equipment_1933:0 "Fusil semi-automatique M.1930"
+ FRA_infantry_equipment_1933_short:0 "MAS-1930"
+ FRA_infantry_equipment_1:0 "Fusil automatique M.1937"
+ FRA_infantry_equipment_1_short:0 "FAM M.1937"
+ FRA_infantry_equipment_2:0 "Fusil automatique M.1937"
+ FRA_infantry_equipment_2_short:0 "FAM M.1937"
+ FRA_infantry_equipment_3:0 "Modèle expérimental de fusil automatique"
+ FRA_infantry_equipment_3_short:0 "MEFA M1"
 
  infantry_weapons1933:0 "Interwar Weapons"
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
