--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -656,6 +656,12 @@
   PB_FRA_Devastate_Their_Lands:0 "Devastate Their Lands"
   PB_FRA_Barons_Of_Hell:0 "Barons Of Hell"
 
+  PB_FRA_The_Champagne_Lorraine_Line:0 "The Champagne Lorraine Line"
+  PB_FRA_Develop_The_Wallonia_Line:0 "Develop The Wallonia Line"
+  PB_FRA_Develop_The_Savoy_Line:0 "Develop The Savoy Line"
+  PB_FRA_Air_Defenses:0 "Air Defenses"
+  PB_FRA_Pioneer_Battalions:0 "Pioneer Battalions"
+
   ##########################
   # FRENCH DECISIONS
   ##########################
