Mid-Post war stuff

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -665,11 +665,56 @@
   PB_FRA_Devastate_Their_Lands:0 "Devastate Their Lands"
   PB_FRA_Barons_Of_Hell:0 "Barons Of Hell"
 
-  PB_FRA_The_Champagne_Lorraine_Line:0 "The Champagne Lorraine Line"
+  PB_FRA_The_Champagne_Lorraine_Line:0 "The Champagne-Lorraine Line"
   PB_FRA_Develop_The_Wallonia_Line:0 "Develop The Wallonia Line"
   PB_FRA_Develop_The_Savoy_Line:0 "Develop The Savoy Line"
   PB_FRA_Air_Defenses:0 "Air Defenses"
   PB_FRA_Pioneer_Battalions:0 "Pioneer Battalions"
+  PB_FRA_In_The_Defense_Of_Paris:0 "In The Defense Of Paris"
+  PB_FRA_In_The_Defense_Of_Lyon:0 "In The Defense Of Lyon"
+  PB_FRA_Final_Touch_Ups_In_Wallonia:0 "Final Touch Ups In Wallonia"
+  PB_FRA_Final_Touch_Ups_In_Savoy:0 "Final Touch Ups In Savoy"
+  PB_FRA_Mobolize_The_Southern_Border_Guard:0 "Mobolize The Southern Border Guard"
+  PB_FRA_Mobolize_The_Northern_Border_Guard:0 "Mobolize The Northern Border Guard"
+  PB_FRA_Focus_On_The_German_Threat:0 "Focus On The German Threat"
+  PB_FRA_Focus_On_The_Italian_Threat:0 "Focus On The Italian Threat"
+  PB_FRA_Mountaineer_Training_Programs:0 "Mountaineer Training Programs"
+  PB_FRA_Marine_Training_Programs:0 "Marine Training Programs"
+
+  PB_FRA_A_New_World_Order:0 "A New World Order"
+  PB_FRA_Collaborator_Britain:0 "Collaborator: §YBritain§!"
+  PB_FRA_Collaborator_Nuremberg:0 "Collaborator: §YNuremberg§!"
+  PB_FRA_Collaborator_Italy:0 "Collaborator: §YItaly§!"
+  PB_FRA_Collaborator_Scandinavia:0 "Collaborator: §YScandinavia§!"
+  PB_FRA_Northern_England_Is_English:0 "Northern England Is English"
+  PB_FRA_Northern_England_Is_Scottish:0 "Northern England Is Scottish"
+  PB_FRA_Directly_Administer_Cornwall:0 "Directly Administer Cornwall"
+  PB_FRA_A_Cornish_State:0 "A Cornish State"
+  PB_FRA_Our_Eyes_On_Ireland:0 "Our Eyes On Ireland"
+  PB_FRA_We_Come_As_Liberators:0 "We Come As Liberators"
+  PB_FRA_Albion_Tamed:0 "Albion Tamed"
+  PB_FRA_A_State_For_The_SP:0 "A State For The SP"
+  PB_FRA_A_State_For_The_Military:0 "A State For The Military"
+  PB_FRA_What_About_Austria:0 "What About Austria?"
+  PB_FRA_Seize_Istria:0 "Seize Istria"
+  PB_FRA_Into_Switzerland:0 "Into Switzerland"
+  PB_FRA_Europes_Favourite_Bank:0 "Europes Favourite Bank"
+  PB_FRA_Germania_Enslaved:0 "Germania Enslaved" 
+  PB_FRA_Just_A_Piece:0 "Just A Piece"
+  PB_FRA_The_Whole_Damn_Thing:0 "The Whole Damn Thing"
+  PB_FRA_And_Sardinia_To:0 "And Sardinia To"
+  PB_FRA_All_We_Want_Is_Your_Factories:0 "All We Want Is Your Factories"
+  PB_FRA_Give_Them_Libya:0 "Give Them Libya"
+  PB_FRA_Give_Them_Dalmatia:0 "Give Them Dalmatia"
+  PB_FRA_Italia_Liberated:0 "Italia Liberated"
+  PB_FRA_Holestein_Is_French:0 "Holestein Is French"
+  PB_FRA_Give_It_To_The_Danes:0 "Give It To The Danes"
+  PB_FRA_A_United_Scandinavia:0 "A United Scandinavia"
+  PB_FRA_A_Disunited_Scandinavia:0 "A Disunited Scandinavia"
+  PB_FRA_Directly_Administer_Gotland_And_Aland:0 "Directly Administer Gotland And Aland"
+  PB_FRA_Scandinavian_Worker_Permits:0 "Scandinavian Worker Permits"
+  PB_FRA_Scandinavia_Domesticated:0 "Scandinavia Domesticated" 
+  PB_FRA_All_Four_Corners_Of_The_World:0 "All Four Corners Of The Globe"
 
   ##########################
   # FRENCH DECISIONS
