First Written events for Pax
Give focus loc scrolls bars Zero please

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -165,6 +165,7 @@
   PB_ENG_English_Chauvinism:0 "English Chauvinism"
   PB_ENG_English_Chauvinism_desc:0 "The Anglo and his fellow celtic brothers built this world and we should be damned proud to do so. From now on let the cross of St George fly in every street in Britain, from now on let the school kids know what we have done for this world and why we are the imperial shining light saving the savages from themselves. Let no man be ashamed to say I am an Englishman for being English is to win the lottery of life. God save our sacred isles and let those traitors who are ashamed to be English go to hell for their treasonous thoughts."
   PB_ENG_Expose_Socialist_Plot:0 "Expose the True Socialist Plot!"
+  PB_ENG_Expose_Socialist_Plot_desc:0 "They shall see what scum these socialists are to the working class when we show them how they wish to crush and destroy the values of Britain which many of us hold dear. Only then will they look to us for their salvation."
   PB_ENG_National_Security_Act:0 "The National Security Act"
   PB_ENG_National_Security_Act_desc:0 "The NPP have brought peace, freedom, justice, and security to the United Kingdom and all of her mandates. To fully make sure of this we shall create the National Security Act which will give the Prime Minister powers to bypass parliament in emergency times' all for good measure of course. God save Britannia."
 
@@ -214,7 +215,7 @@
   PB_ENG_1937_Wartime_Rationing:0 "Institute Rationing"
   PB_ENG_1937_Wartime_Rationing_desc:0 "With a heavy heart the Government shall introduce rationing throughout the nation. The war is taking a toll on supplies on the Island and the only way to make sure everyone gets food on the dinner is to implement rationing for both the poor and the rich. This will reduce much of the pressure on the Government as we implement schemes such as growing your own food for victory whilst also reducing the strain of home front problems for Downing Street."
   PB_ENG_1937_Arsenal_of_Democracy:0 "The Arsenal of Empire"
-  PB_ENG_1937_Arsenal_of_Democracy_desc:0 "The British army and her Imperial branches from the Empire is the grandest army to ever march the Earth. However there has been talks from the Imperial staff of lack of equipment such as artillery and tanks to punch through fortified positions. To combat this we shall ramp up our war industry to create the greatest arsenal to ever existed. An arsenal for Empire. An arsenal which shall give us the keys to the victory." 
+  PB_ENG_1937_Arsenal_of_Democracy_desc:0 "The British army and her Imperial branches from the Empire is the grandest army to ever march the Earth. However it is obvious that we cannot win the Second Great War alone. To counter this the British military shall open up it's arsenal to the German high command in hopes that with British weapons and German tactical and strategic thinking that it might give us the keys to victory in which this country so desperately needs." 
   PB_ENG_1937_Minority_Autonomy:0 "Necessities for Imperial Unity"
   PB_ENG_1937_Minority_Autonomy_desc:0 "Britain is not alone in this war. She has her empire to provide support and manpower to win the war and although we may be the seat of the Imperial Federation we are infact more reliant on those imperial colonies then they're on us. To satisfy our colonies and keep them in the fight we shall grant privellages and benefits to these colonial nations in the name of Imperial Unity to win this war. God help us where this might lead to."
 
@@ -844,11 +845,11 @@
   britain.1.a:0 "The King is dead. Long Live the King."
 
   britain.2.t:0 "The Stock Crisis"
-  britain.2.d:0 ""
+  britain.2.d:0 "Reports from the Imperial Stock Exchange in London have indicated a major downturn in the stock market and the economy as a whole. Political mayhem in France and political uncertainty in Ireland and Germany has caused for many of the major businesses in Britain to suffer and close down especially the iron and coal industries due to their reliance on German trade.\n\nWith unemployment rising rapidly the British Government has scrambled to try resolve this economic shock however time will tell if Britain can whether the storm."
   britain.2.a:0 "Just a slight ripple. It'll pass."
 
   britain.3.t:0 "The Crisis Deepens"
-  britain.3.d:0 ""
+  britain.3.d:0 "'Dear Prime Minister n\nWe are to report sadly that the shipping industries around this country have collapsed due to lack of demand for the market of British ships in the Empire due to the stock crisis and the inability to gain the stock to produce whatever demand is left.\n\nTo make matters worst this has lead to massive unemployment in the industrial north of England, Scotland and Wales which has practically made Britain bankrupt overnight.\n\n Lastly Prime Minister this has caused the side effect of shattering the Imperial Preference system we currently maintain as due to the Federation's reliance on our central economy has broke all of our dependencies and colonies markets and economies reliance on us. It now falls to you Prime Minister to fix this mess as we in the treasury cannot afford to do so as we have pratically no money left.\n\n-Your Friend and colleague The Chancellor of the Exchequer"
   britain.3.a:0 "This is bad."
 
   britain.4.t:0 "Picking up the Pieces"
