--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -829,6 +829,14 @@
   FRA_Unit_Leader_Defense:0 "Every §YUnit Leader§! Will Gain One Defense Skill Level"
 
   PB_FRA_France_Rule_The_Waves_tt:0 "§YBrute Force Policy and Renewed Naval Policy§! will be merged into one idea"
+ 
+  PB_FRA_Collaborator_Britain_tt:0 "Region specific decisions for §YCollaborators§! in Britain will unlock"
+  PB_FRA_Collaborator_Nuremberg_tt:0 "Region specific decisions for §YCollaborators§! in Germany will unlock"
+  PB_FRA_Collaborator_Italy_tt:0 "Region specific decisions for §YCollaborators§! in Italy will unlock"
+  PB_FRA_Collaborator_Scandinavia_tt:0 "Region specific decisions for §YCollaborators§! in Scandinavia will unlock"
+  PB_FRA_Collaborator_Charles_de_Gaulle_tt:0 "Charles de Gaulle will be placed as the §YRoyaume Dictent§! of Cornwall"
+  PB_FRA_HAN_SP:0 "The §YSP§! will be very pleased with this arrangement"
+  PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
