--- a/localisation/PB_Opinion_Modifiers_l_english.yml
+++ b/localisation/PB_Opinion_Modifiers_l_english.yml
@@ -10,5 +10,6 @@
   former_imperial_subjects:0 "Former Imperial Subjects"
   supported_enemy:0 "Supported Our Enemies"
   rising_power:0 "New World Order"
+  supported_our_government:0 "Supported Our Government"
 
   tariffs:0 "Economic Tariffs Imposed"
