--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3800,10 +3800,10 @@ SAN_jc:0 "Sanghli State"
  SAX_cn_ADJ:0 "Saxon"
  SAX_an_ADJ:0 "Saxon"
 
- HAN_ni:0 "Kingdom of Hannover"
- HAN_ni_DEF:0 "Kingdom of Hannover"
- HAN_ds:0 "Kingdom of Hannover"
- HAN_ds_DEF:0 "Kingdom of Hannover"
+ HAN_ni:0 "Administrative Zone Of Hannover"
+ HAN_ni_DEF:0 "Administrative Zone Of Hannover"
+ HAN_ds:0 "Administrative Zone Of Hannover"
+ HAN_ds_DEF:0 "Administrative Zone Of Hannover"
  HAN_rc:0 "Kingdom of Hannover"
  HAN_rc_DEF:0 "Kingdom of Hannover"
  HAN_an:0 "Kingdom of Hannover"
@@ -3824,6 +3824,10 @@ SAN_jc:0 "Sanghli State"
  HAN_ds_ADJ:0 "Hannoverian"
  HAN_cn_ADJ:0 "Hannoverian"
  HAN_an_ADJ:0 "Hannoverian"
+ 
+ HAN_SP:0 "SP Hanovre"
+ HAN_SP_DEF:0 "SP Hanovre"
+ 
 
  BOS_ni:0 "Bosnia"
  BOS_ni_DEF:0 "Bosnia"
@@ -7551,6 +7555,31 @@ SAN_jc:0 "Sanghli State"
  IST_ds_ADJ:0 "Italian"
  IST_cn_ADJ:0 "Italian"
  IST_an_ADJ:0 "Italian"
+
+ CON_ni:0 "Administrative Zone Of Cornwall"
+ CON_ni_DEF:0 "Administrative Zone Of Cornwall"
+ CON_ds:0 "Administrative Zone Of Cornwall"
+ CON_ds_DEF:0 "Administrative Zone Of Cornwall"
+ CON_rc:0 "Administrative Zone Of Cornwall"
+ CON_rc_DEF:0 "Administrative Zone Of Cornwall"
+ CON_an:0 "Administrative Zone Of Cornwall"
+ CON_an_DEF:0 "Administrative Zone Of Cornwall"
+ CON_cn:0 "Administrative Zone Of Cornwall"
+ CON_cn_DEF:0 "Administrative Zone Of Cornwall"
+ CON_lb:0 "Administrative Zone Of Cornwall"
+ CON_lb_DEF:0 "Administrative Zone Of Cornwall"
+ CON_ss:0 "Administrative Zone Of Cornwall"
+ CON_ss_DEF:0 "Administrative Zone Of Cornwall"
+ CON_jc:0 "Administrative Zone Of Cornwall"
+ CON_jc_DEF:0 "Administrative Zone Of Cornwall"
+ CON_ni_ADJ:0 "Cornish"
+ CON_rc_ADJ:0 "Cornish"
+ CON_lb_ADJ:0 "Cornish"
+ CON_ss_ADJ:0 "Cornish"
+ CON_jc_ADJ:0 "Cornish"
+ CON_ds_ADJ:0 "Cornish"
+ CON_cn_ADJ:0 "Cornish"
+ CON_an_ADJ:0 "Cornish"
 
 ###################################
 # TEMPLATE
