--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -72,6 +72,9 @@
   PB_GER_Libertine_Culture_desc:0 "Germany's reputation as a cultural melting pot continues into modernity. With the liberalizing reforms of Kaiser Rudolf, starkly contrasted with the conservatism of his father, Germany has become a beacon of social, scientific and cultural progress in a Europe which is increasingly hostile to those ideas. The mass exodus of refugees from Russia and France has created a vibrant, unflinchingly internationalist cultural landscape."
   PB_GER_Political_Violence_0:0 "Significant Political Violence"
   PB_GER_Political_Violence_0_desc:0 "Though Germany achieved near total victory in the Great War, the aftermath has been anything but victorious. With the economy in shambles, ill-intentioned radicals are stirring up trouble throughout the fatherland. Jacobin revolutionaries speak to packed coffee houses, spouting the doctrine of revolution and socialist utopia. Hardline nationalists pour into the beer halls of Bavaria and Berlin, eager to denounce everything from the Jacobins to the Jews. Outbreaks of political violence are not uncommon and thus far the administration has been unwilling to crack down on them openly for fear of exacerbating the issue."
+  PB_GER_Political_Violence_Black:0 "The Brown Resistance"
+  PB_GER_Political_Violence_Red:0 "The Red Traitors"
+  PB_GER_Political_Violence_Mixed:0 "Polticial Extremism"
   PB_GER_Political_Violence_1:0 "Moderate Political Violence"
   PB_GER_Political_Violence_2:0 "Minor Political Violence"
   PB_GER_Political_Violence_3:0 "Contained Political Violence"
@@ -100,7 +103,19 @@
   ##########################
   PB_GER_Rudolf_Crisis:0 "The Abdication Crisis"
 
-  PB_GER_Kaiser_Elizabeth:0 "The Kaiserin of the People"
+  PB_GER_Red_Diachy:0 "The Red Diachy"
+  PB_GER_Red_Diachy_desc:0 ""
+  PB_GER_Kaiser_Elizabeth:0 "Talking with the Kaiserin"
+  PB_GER_Sideline_Extremists:0 "Sideline the Radicals of the SB"
+  PB_GER_Rights_of_Workers:0 "Expand Worker Rights"
+  PB_GER_Limit_Church_Power:0 "Limiting the State Power of the Church"
+  PB_GER_National_Recovery_Programm:0 "The Programm of National Recovery"
+  PB_GER_Nationalization_Industry:0 "Rightful Nationalization"
+  PB_GER_Tragic_Rearmament:0 "Facing Reality"
+  PB_GER_German_Federation_Unify_States:0 "Equality among the German States"
+  PB_GER_German_Federation_Centralization:0 "Continue Centralization"
+  PB_GER_German_Free_Phillipines:0 "Freeing the Phillipines"
+
   PB_GER_Embrace_Stresemann_Reforms:0 "Greenlight Stresemann's Reforms"
   PB_GER_Imperial_Federation:0 "Propose the German Federation"
   PB_GER_Womens_Suffrage_Focus:0 "Push for Women's Suffrage"
@@ -451,6 +466,15 @@
   germany.46.d:0 "The Alsace National Union Party, founded in 1925 after the ultranationalist coup in France, has been making moves throughout the province to organize anti-German resistance. The group, headed by Henri Barbé, is generally known for their vocal and militant demands for the return of Alsace to the French state. These same notable stances are also what lead to the party being banned by the German government.\n\nDriven underground, the ALNU has become more akin to a terrorist organization. It's an open secret that their funding comes from the French state, and they have used this funding to launch bombings and assassinations across Alsace in an effort to turn public opinion against the German government."
   germany.46.a:0 "You lost the war, get over it."
 
+  germany.47.t:0 "The Rhenish Freikorps Falls"
+  germany.47.d:0 "Reichsheer troops descended upon various cities in the Rhineland in force to capture or kill the several different groups of Freikorps, a band of Great War veterans and youths responsible for attacking local trade unions and left demonstrations. Our forces were met with little resistance, some groups decided to fight back, but after a brief standoff their leaders were convinced to stand down and come quietly. The Rhenish Freikorps Groups, thankfully, were not organized and united enough to try and test our patience. It seems like their numbers themself were very low, being harassed by equal strong socialist militias\n\nThe people region is generally happy about the dissolution of the Freikorps in the region who everyone from Consertative to Jacobin saw them as nothing more then as criminals and troublemakers. "
+  germany.47.a:0 "Well this was easier then expected."
+
+  germany.48.t:0 "Negotiations with the Czech Legion"
+  germany.48.d:0 "The Region of Czechia has been become a region of rising unrest in the last decades. With rising nationalism in Europe it seems like the Czech People are more and more seeing themself as a seperate culture groups then us Germans. Despite being a part of the Holy Roman Empire for more then 600 Years the Czechs never truly became Germans and are now seeming to beginn a path of seperatism. Czech Language is spoken more in school, German Adminstrators are being replaced by young competent Czechs and so on. The biggest problem is however the Czech Legion.\n\The Czech Legion is the equivalent of the Freikorps Groups in other German Cities with the key difference that they are fighting against German Influence in Czechia. Harassment of German Citiziens, organizing strikes against German-Factories and even terrorism. However they are not a terrorism group truthfully and were able to inspire Czech Nationalism in their region due the neglience of the old Government.\n\Despit Army Commanders and a majority of politicians advocating of an violent purge of this group, the Thalmann wants to avoid spilling more blood in Germany and fears it could lead to more radical terrorism. The Government has arranged a meeting with the most prominent leaders of the Czech Legion, led by Josef Šnejdárek. He seems to be aware that a rebellion against Germany will likely not be sucessful and rather demands more autonomy for the Czech inside the United Kingdoms. However the demands he has are hard to accept as they severly restrict German Centralization over the Region and reduce German Buisnesses."
+  germany.48.a:0 "Concessions for Unity need to be made."
+  germany.48.b:0 "Just accept that you are Germans."
+
   ##########################
   # DECISIONS
   ##########################
@@ -459,9 +483,11 @@
   PB_GER_Political_Violence_desc:0 "\n\n\n\n\n\nGermany's postwar political scene can be, at best, described as chaotic. Some have even mockingly called it politics by assassination, due the myriad of left and right wing political killings since the war's end. While normally this would be an issue to be resolved over time, we must deal with our own internal factionalism if we are to be prepared for the inevitable French attack.\n\n§YEach Mission Completed will reduce the level of political violence. Completing Every Mission will remove the National Spirit entirely.§!"
   PB_GER_Target_Berlin_Freikorps:0 "Target the Berlin Freikorps"
   PB_GER_Target_Bavarian_Freikorps:0 "Target the Bavarian Freikorps"
+  PB_GER_Target_Rhine_Freikorps:0 "Target the Freikorps Units in the Rhine Area"
   PB_GER_Target_Czech_Legion:0 "Target the Czech Legion"
   PB_GER_Target_Alsace_National_Union:0 "Target the Alsace National Alliance"
   GER_PB_GER_Political_Violence_Timeout:0 "Outbreak of Political Violence"
+  PB_GER_Negotiate_Czech_Legion:0 "Negotiate with the Czech Legion"
 
   PB_GER_Economic_Recovery:0 "Economic Recovery"
   PB_GER_Economic_Recovery_desc:0 "\n\n\n\n\n\nThe collapse of the German economy in the immediate aftermath of the Great War sparked an economic depression unlike any seen in living memory. Millions are unemployed, political radicalization is commonplace, and the Thaler has lost most of its' value. If Germany is to recover, we must pursue a comprehensive plan to get the German people back to work and get our economy back on track.\n\n§YEach decision completed will contribute towards our economic recovery. Once all decisions for a stage of recovery are completed, we can progress to the next stage.§!"
@@ -543,6 +569,9 @@
 
   GER_Unlock_Pol_Violence_Decisions:0 "§YUnlocks§! £decision_icon_small Decisions to begin tackling political unrest"
   GER_Unlock_Economic_Recovery_Decisions:0 "§YUnlocks§! £decision_icon_small Decisions to begin Germany's economic recovery"
+  czech_agitation:0 "Czech Unrest"
+  semi_autonomous_state:0 "Autonomous State"
+  french_terrorism:0 "The Alsace National Union Party"
 
   ##########################
   # COSMETIC TAGS
