--- a/localisation/production_l_english.yml
+++ b/localisation/production_l_english.yml
@@ -41,10 +41,10 @@
  PRODUCTION_EFFICIENCY_DESC:0 "§TAverage Factory Production Efficiency.\nProduction Efficiency Increases by $VALUE|H=2$%/unit produced split evenly on active Factories.§!"
  PRODUCTION_RESOURCE_PENALTY:0 "§TLack of resources: $AMOUNT|R2%$§!"
  PRODUCTION_ASSIGN_EQUIPMENT:0 "§TAssign Equipment to start production.§!"
- PRODUCTION_MATERIALS_OIL:0 "Oil"
+ PRODUCTION_MATERIALS_OIL:0 "Crude Oil"
  PRODUCTION_MATERIALS_ALUMINIUM:0 "Aluminum"
  PRODUCTION_MATERIALS_RUBBER:0 "Rubber"
- PRODUCTION_MATERIALS_CHROMIUM:0 "Chromium"
+ PRODUCTION_MATERIALS_CHROMIUM:0 "Rare Metals"
  PRODUCTION_MATERIALS_STEEL:0 "Steel"
  PRODUCTION_MATERIALS_TUNGSTEN:0 "Tungsten"
  PRODUCTION_MATERIALS_GRAIN:0 "Agriculture"
