--- a/localisation/unit_l_english.yml
+++ b/localisation/unit_l_english.yml
@@ -130,6 +130,73 @@
  UNIT_LEADER_PROMOTE_WITH_COST:0 "Promote £command_power $CP|2R$"
  UNIT_LEADER_PROMOTE_BLOCKED:0 "Unable to promote."
  UNIT_LEADER_PROMOTE_NEED_CP:0 "Need $CP|2R$ more CP."
+ CANNOT_MOVE_WHILE_TRAINING:0 "Cannot move while conducting §HArmy Exercises§!"
+ UNIT_DEMILITARIZED:0 "$STATE|H$ is a demilitarized zone."
+ UNIT_IMPASSABLE:0 "Path to $STATE|H$ is impassable."
+ UNIT_ADJECENCY_RULE_BLOCKED:0 "Movement is blocked due to the $RULE_NAME|H$ permission"
+ UNIT_CANT_MOVE_TO_OCCUPIED_NEUTRAL:0 "§RCannot move to a location§! owned by $OWNER|Y$.\nWe need to ask them for a §GMilitary Access§! first."
+ DEMILITARIZED_ZONE:1 "Demilitarized: §Rtroops may not enter§!"
+ PLAN_PREPARATION:0 "Plan preparation attack bonus: $VALUE|0Y%$ (Max: $MAX|0Y%$)"
+ PLAN_PREPARATION_FACTOR:0 "Plan preparation attack bonus factored by: $VALUE|0+%$"
+ PLAN_PREPARATION_CHANGE:0 "Preparation increases by $VALUE|1Y%$ each day."
+ PLAN_PREPARATION_DESC:0 "Units at the starting position of a plan will start ticking up a preparation bonus. Once they start fighting with the plan or move away this bonus will begin ticking down again."
+ SELECT_HALF_DIVISIONS:0 "§TSelect half of the current divisions§!"
+ HOLD_DIVISIONS:0 "§THold divisions.§!"
+ MOUNT_BUTTON_SINGLE_LOAD_DESC:0 "Load division to transport ship."
+ MOUNT_BUTTON_SINGLE_UNLOAD_DESC:0 "Unload division from transport ship."
+ MOUNT_BUTTON_MULT_LOAD_DESC:0 "Load all available divisions to transport ships."
+ MOUNT_BUTTON_MULT_UNLOAD_DESC:0 "Unload all available divisions from transport ships."
+ MOUNT_BUTTON_ERROR_DESC:0 "Load/Unload transport ships with units."
+ MAX_ORGANIZATION_TITLE:0 "§HMax Organization:§!\n"
+ FROM_TEMPLATE:0 "Division Template: $VAL|Y$"
+ FROM_TEMPLATE_MOD:0 "From Division Template: $VAL|+=%$"
+ FROM_TEMPLATE_MOD2:0 "From Division Template: $VAL|+=$"
+ OOS_MOD2:0 "Out of Supply: $VAL|+=%$"
+ ORG_REGAIN_INFRA2:0 "Infrastructure: $VAL|+=%$"
+ PARADROP_MORALE_PENALTY:0 "Recent Paradrop: $VAL|+=%$"
+ MORALE_TITLE:0 "§HHourly Recovery:§! $VAL|+=$"
+ SHIP_MORALE:0 "Ship: $VAL|Y$"
+ SHIP_MORALE_MOD:0 "Ship: $VAL|=%$"
+ NAVAL_COMBAT_SHIP_ORGANIZATION:0 "Organization: $CUR|0Y$/$MAX|0Y$\n"
+ NAVAL_COMBAT_SHIP_ORGANIZATION_DESC:0 "Organization indicates combat readiness and how organized a ship is. A ship with no organization can't fight"
+ STAT_FROM_TECH:0 "From Technology: $VAL|+=1%$"
+ STAT_FROM_EQUIPMENT:0 "From Equipment: $VAL|+=1%$"
+ STAT_BASE_VALUE:0 "Base: "
+ LOW_MANPOWER_STAT_EFFECT:0 "§RWe currently only have $CUR|Y$ of $MAX|Y$ men in this division, limiting all stats to $FACTOR|%Y$ of what they would be if all equipment was present.§!"
+ TITLE_STATS_FROM_BATTALIONS:0 "§HDivision Setup:§!"
+ TITLE_STATS_FROM_OTHER:0 "§YExternal Factors:§!"
+ UNIT_EXILED:0 "This unit is exiled. It needs to return to our territories."
+ FINAL_STAT_AVERAGE:0 "Averaged base: "
+ FINAL_STAT_TOTAL:0 "Total base: "
+ FINAL_STAT_MAX:0 "Highest: "
+ FINAL_STAT_MIN:0 "Lowest base: "
+ FINAL_STAT_WEIGHTED:0 "Final Weighted Average ($WEIGHT|%0Y$ highest): "
+ STAT_SUBUNIT_COUNT:0 "$VAL$ x "
+ UNIT_STATS_STATS_TAB:0 "Stats"
+ UNIT_STATS_TEMPLATE_TAB:0 "Template"
+ COMBAT_UNIT_ICON_WINNING:0 "§GWinning Battle ($AMOUNT|H%0$)§!"
+ COMBAT_UNIT_ICON_LOSING:0 "§RLosing Battle ($AMOUNT|H%0$)§!"
+ COMBAT_UNIT_ICON_UNDECIDED:0 "§TBattle§!"
+ COMBAT_UNIT_ICON_DESC:0 "§T$UNIT|H$ is engaged in a battle in $STATE|H$.§!"
+ COMBAT_UNIT_ICON_TERRAIN:0 "§TTerrain: $TERRAIN|H$§!"
+
+ category_light_infantry:0 "Leg Infantry"
+ category_all_infantry:0 "All Infantry & Mot/Mech"
+ category_front_line:0 "All Frontline Battalions"
+ category_support_battalions:1 "Support Companies"
+ category_all_armor:0 "Tanks & Armor Variants"
+ category_tanks:0 "Tanks"
+ category_army:0 "Army"
+ category_recon:0 "Recon"
+ category_line_artillery:0 "Line Artillery"
+ category_artillery:0 "Artillery Support & Line"
+ category_fighter:0 "Fighter"
+ category_heavy_fighter:0 "Heavy Fighter"
+ category_cas:0 "Close Air Support"
+ category_nav_bomber:0 "Naval Bombers"
+ category_tac_bomber:0 "Tactical Bombers"
+ category_strat_bomber:0 "Strategic Bombers"
+ 
  SET_SHIP_PRIDE_OF_FLEET:0 "§HAssign§! $NAME|H$ as §HPride of the Fleet§!"
  REPLACE_SHIP_PRIDE_OF_FLEET:0 "§RReassign§! $NAME|H$ as current §HPride of the Fleet§!"
  SET_SHIP_PRIDE_OF_FLEET_DESC:0 "You will receive following bonuses:\n$BONUS$\n\n"
@@ -370,3 +437,118 @@ super_heavy_tank_destroyer_brigade:0 "Super Heavy Landship Destroyer"
 super_heavy_tank_destroyer_brigade_desc:0 ""
 modern_tank_destroyer_brigade:0 "Modern Landship Destroyer"
 modern_tank_destroyer_brigade_desc:0 ""
+
+TRANSPORT_ALREADY_ACTIVE:0 "We are already being transported"
+ TRANSPORT_NO_NAVAL_BASE:0 "Cannot transport to a non-naval base location"
+ TRANSPORT_NO_FROM_NAVAL_BASE:0 "Cannot transport from a non-naval base location"
+ TRANSPORT_NOT_ENOUGH:0 "We need $NEED|Y$ convoys but have only $FREE|Y$ to transport this division(s)."
+ TRANSPORT_ACTIVE_CANT_MOVE:0 "Cannot move a unit while it is being transported."
+ TRANSPORT_NOT_DURING_COMBAT:0 "Cannot redirect transport while convoy is in combat."
+ NO_COUNTER_ATTACK_IN_COMBAT:0 "§RCannot counter attack a unit you are already defending against§!"
+ TRANSPORT_NO_ACCESS:0 "We have no access there."
+ TRANSPORT_NO_SEA_ROUTE:0 "§RNo valid sea route to this location.§!"
+ ATTRITION_NAVAL_TRANSFER:0 "Naval transportation: $ATT|=-1%0$"
+ NAVAL_TRANSPORT_INTERCEPT_WARNING:1 "§RWe are currently at war and our transports risk being sunk when moving troops. We can make sure ships on Escort Mission are in the area to help if that happens.§!\n Transporting on this particular route has a $ATTR|%R0$ chance of being detected and intercepted."
+ NAVAL_TRANSPORT_MOVE_DESC:0 "§GRight-click§! on §Ythe naval icon§! to §Ytransport§! the units to this §Ynaval base§!. Transport will require $CONVOYS|Y$ convoys."
+ NAVAL_TRANSPORT_MOVE_DESC_ICON:0 "§GRight-click§! to §Ytransport§! the units to this §Ynaval base§!. Transport will require $CONVOYS|Y$ convoys."
+ NAVAL_INVASION_LACK_TRANSPORT:0 "Reserved Convoys: $VAL|R$/$NEED|Y$."
+ NAVAL_INVASION_LACK_PREPARATION:1 "Invasion is still preparing $VAL|R0$/$NEED|Y0$ days."
+ NAVAL_INVASION_WE_LACK_PREPARATION:0 "We have prepared for $VAL|Y0$ days out of the $NEED|Y0$ needed."
+ NAVAL_INVASION_THEY_LACK_PREPARATION:0 "They have prepared for $VAL|Y0$ days out of the $NEED|Y0$ needed."
+ NAVAL_INVASION_PREPERATION_SPEED:0 "Preparation Speed:"
+ NAVAL_INVASION_BLOCKED_STRAIT:0 "§RDue to $RULES|H$ being blocked between $FIRST|H$ and $SECOND|H$ our armies cannot invade.§!"
+ NAVAL_INVASION_OVER_CAP:1 "§RNaval Invasion Capacity Exceeded:§!\nUsed in invasions $USED|Y$\nTotal limit $MAX|Y$\nSelected divisions $SELECTION|R$.\nResearch more £tech_mod Transports Technology to increase your Naval Invasion Capacity."
+ MODIFIER_NAVAL_INVASION_CAPACITY:0 "Naval Invasion Capacity"
+ MODIFIER_NAVAL_INVASION_CAPACITY_DESC:0 "Total number of divisions that can be assigned to a naval invasion order."
+ motorized_rocket_brigade:0 "Motorized Rocket Artillery"
+ motorized_rocket_brigade_short:0 "Mot. R. Artillery"
+ motorized_rocket_brigade_desc:0 "Self-propelled rocket artillery allows for larger, multiple rocket launchers which can both move in and out quickly after striking a target area."
+ NAVAL_SUPREMACY:0 "§HNaval Supremacy:§! $VALUE|%H$"
+ NAVAL_REGION_ACCESS_LEVEL:0 "Access level: $LVL$"
+ NAVAL_REGION_ACCESS_ALLOWED:0 "§GAllowed§!"
+ NAVAL_REGION_ACCESS_AVOID:0 "§HAvoid§!"
+ NAVAL_REGION_ACCESS_BLOCKED:0 "§RBlocked§!"
+ NAVAL_REGION_ACCESS_ALLOWED_DESC:0 " - §HFleets§! and §HTrade routes§! will move through this region as normal."
+ NAVAL_REGION_ACCESS_AVOID_DESC:1 " - §HFleets§! and §HTrade routes§! will try to §Havoid§! this region, unless there is no other route."
+ NAVAL_REGION_ACCESS_BLOCKED_DESC:0 " - §HTrade routes§! will §Rnever pass§! through this region.\n - §HFleets§! will §Rnever pass§! through this region, unless there is no other route."
+ CAN_NOT_PARADROP_BATALION:0 "$AMOUNT|H$ of $BATALION|H$ battalions cannot be parachuted."
+ CAN_PARADROP_TEMPLATE:0 "Divisions using this template §GCAN§! be parachuted."
+ CAN_NOT_PARADROP_TEMPLATE:0 "Divisions using this template §RCANNOT§! be parachuted."
+ BATALION_CAN_BE_PARCHUTED:0 "This battalion §GCAN§! be parachuted."
+ BATALION_CAN_NOT_BE_PARCHUTED:0 "This battalion §RCANNOT§! be parachuted."
+ ESTIMATED_NAVAL_POWER:1 "  Friendly ships with orders to engage: $US|0Y$\n  Enemy ships with orders to engage: $THEM|Y$"
+ ESTIMATED_NAVAL_POWER_SUPREMACY:0 "  Friendly supremacy: $US|0Y$\n  Enemy supremacy: $THEM|Y$"
+ NAV_AIR_SUPERIORITY:1 "  Our Air Superiority increases our ship amount impact by: $VALUE|%G=$"
+ NAV_MINES_EFFECT_ON_US:1 "  Our Mine Coverage increases our ship amount impact by: $VALUE|%G=$"
+ NAV_MINES_EFFECT_ON_ENEMY:1 "  Enemy Mine Coverage increases their ship amount impact by: $VALUE|%G=$"
+ NAV_ENEMY_AIR_SUPERIORITY:1 "  Enemy Air Superiority increases their ship amount impact by: $VALUE|%=R$"
+ NAV_SUPREMACY_INTEL:1 "§RWe know too little about this region!§!"
+ NAV_SUPREMACY_INTEL_SCALED:1 "§RNaval Supremacy is scaled to $RATIO|%.0R$ because of low enemy intel§!"
+ INTEL_EFFICIENCY:0 "  Intel efficiency: $VAL|%+$"
+ NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH:1 " - $NAME|Y$ - We only have $SUP|0%R$ Naval Supremacy but require $NEEDED|0%Y$"
+ NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_TITLE:0 "\n§RInsufficient Naval Supremacy in regions:§!\n"
+ NAVAL_INVASION_WE:0 "We"
+ NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_NO_INTEL:2 "\n§R$WHO$ lack sufficient intel to dare sending an invasion through the regions:§!"
+ NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_NO_INTEL_HINT:0 "\n§RAssign more navies or airwings on missions, or cover the above areas with Radar.§!\n"
+ NAVAL_INVASION_CANT_TRANSFER:1 "\nPerforming Naval Invasions requires Naval Supremacy along Areas in its path. This is gained by:\n - Air Superiority\n - Ships on Missions"
+ CLICK_TO_ASSIGN_COMMANDER:0 "§GClick to assign a commander.§!"
+ NAVAL_INVASION_NOT_REACHED_START:0 "§RSome divisions assigned to this invasion have not reached the start position yet.§!\n"
+ PARADROP_INVASION_CAN_NOT_TRANSFER:0 "§RTo perform a Paradrop operation we must have more than $RATIO|0%H$ Air Superiority in next strategic regions: $LIST$§!"
+ TEMPLATE_DURING_REORGANIZATION:0 "Division is currently switching to a new or upgraded template. During this time they will use stats from the old one until they have enough equipment suitable for the new.\n"
+ SPEED_OUT_OF_SUPPLY:0 "Out of supply: $VALUE|+=%$"
+ SPEED_INFRASTRUCTURE_IMPACT:0 "Infrastructure: $VALUE|+=%$"
+ SPEED_STRATEGIC_REDEPLOYMENT_DESC:0 "Strategic redeployment speed $VAUE|H$ km/h"
+ SPEED_RETREATING:0 "Retreating: $VALUE|+=%$"
+ GOOD_ARMOR_DEFENSE_DESC:0 "If an Enemy Division attacking us is unable to penetrate we will lose $ORG|%0G$ less organization and take $STR|%0G$ less damage.\n"
+ GOOD_ARMOR_ATTACK_DESC_STR:0 "If attacking an Enemy Division that cannot penetrate our armor we will do $VAL|%0G$ more damage.\n"
+ GOOD_ARMOR_ATTACK_DESC_ORG:0 "If attacking an Enemy Division that cannot penetrate our armor we will reduce their organization by an additional $VAL|%G0$.\n"
+ PIERCING_GOOD_DESC:0 "The division will not get extra bonuses from being able to penetrate an Enemy Division, but that division will not receive bonuses due to its armor."
+ DIVISION_SHATTERED:0 "Overrun!"
+ PREPERATION_BASE_DAILY_GAIN:0 "Base daily gain: $VALUE|0%Y$"
+ PREPERATION_BASE_MAX:0 "Base max: $VALUE|0%Y$"
+ PLAN_PREPERATION_BREAKDOWN:0 "$MAX_DESC$\n$SPEED_DESC$"
+ CLICK_TO_ASSIGN:0 "Click to assign."
+ ADD_ATTACK_SKILL:0 "Add Attack Skill: $NUM|+$"
+ ADD_DEFENSE_SKILL:0 "Add Defense Skill: $NUM|+$"
+ ADD_LOGISTICS_SKILL:0 "Add Logistics Skill: $NUM|+$"
+ ADD_PLANNING_SKILL:0 "Add Planning Skill: $NUM|+$"
+ ADD_MANEUVER_SKILL:0 "Add Maneuvering Skill: $NUM|+$"
+ ADD_COORDINATION_SKILL:0 "Add Coordination Skill: $NUM|+$"
+ ADD_SKILL_LEVEL:0 "Add Skill Level: $NUM|+$"
+ CHOOSE_INSIGNIA:0 "Choose Insignia"
+ CLICK_TO_ASSIGN_TRAITS:0 "§HClick§! to assign a new §HTrait§! to this §HUnit Leader§!"
+ CLICK_TO_ASSIGN_TRAITS_DETAIL:0 "$LEADER|H$ has $NUM|H$ remaining trait slots to assign."
+ category_special_forces:0 "Special Forces"
+ LEADER_GAIN_TRAIT_LEVEL:0 "Leader can assign a new trait every $NUM|.0H$ levels.\n"
+ FM_GAIN_TRAIT_LEVEL:0 "Field Marshals can assign a new trait when they are promoted.\n"
+ DELETE_ARMY:0 "§RDelete Army§!"
+ UNASSIGN_ARMY:0 "§RUnassign Army§!"
+ DELETE_ARMY_GROUP:0 "§RDelete army group and all assigned armies§!"
+ UNASSIGN_ARMY_GROUP:1 "§GClick§! to §RDisband§! the army group.\n§GShift + Click§! to §RDisband§! the army group and all of its armies."
+ FROM_ARMY_GROP_LEADER:0 "Partial bonuses from $NAME|H$\n"
+ FIELD_MARSHAL_BONUS_INFO:0 "Non-§HField Marshal§! bonuses only apply by $RATIO|%.0H$\n"
+ CLICK_TO_HIDE_ARMIES:0 "Click to §HHide§! armies belonging to this group.\n"
+ CLICK_TO_SHOW_ARMIES:0 "Click to §HShow§! armies belonging to this group.\n"
+ TOGGLE_ARMY_GROUP_VIEW_ARMIES_DIVISIONS:0 "Switch between viewing the armies or divisions in this army group."
+ DIVISION_VIEW_SELECT_ARMY:0 "Click to select this division's army."
+ NEW_FLEET_NAME:0 "New Fleet"
+ CREATE_FLEET_FROM_SELECTED_TASK_FORCES:0 "§GClick§! to create a new fleet from the selected task forces."
+ CANNOT_CREATE_FLEET_FROM_SELECTED_TASK_FORCES:0 "§RCannot create a fleet with the current selection§!"
+ NUMBER_OF_ENEMY_SHIPS:0 "Estimated number of enemy ships in region"
+ NUMBER_OF_ALLY_SHIPS:0 "Number of friendly ships in region"
+ EFFECT_OF_OUR_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY:0 "Effect of our air superiority on our Naval Supremacy"
+ EFFECT_OF_ENEMY_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY:0 "Effect of enemy air superiority on their Naval Supremacy"
+ EFFECT_OF_OUR_MINES_ON_NAVAL_SUPREMACY:0 "Effect of our mines on our Naval Supremacy"
+ EFFECT_OF_ENEMY_MINES_ON_NAVAL_SUPREMACY:0 "Effect of enemy mines on their Naval Supremacy"
+ NO_NAVAL_SUPREMACY_INFO:0 "There are no enemy or friendly ships in the region"
+ damaged_heavy_guns:1 "Main Battery Turret Destroyed"
+ damaged_light_guns:1 "Main Battery Mount Disabled"
+ damaged_torpedoes:0 "Torpedo Tubes Disabled"
+ destroyed_ammo_storage:1 "Magazine Hit"
+ on_fire:1 "Heavy Fires"
+ broken_propeller:0 "Broken Propeller"
+ rudder_jammed:0 "Rudder Jammed"
+ ballast_tanks_inoperable:0 "Ballast Tanks Inoperable"
+ damaged_secondaries:0 "Secondaries Knocked Out"
+ CONFIRM_DISBAND_FLEET_TITLE:0 "Disband fleet"
+ CONFIRM_DISBAND_FLEET_DESC:0 "Are you sure you want to §YDISBAND§! the fleet $NAME|H$?\n\nAll the task forces will be moved to reserve."
