--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -187,7 +187,7 @@
  VICTORY_POINTS_306:0 "Smolensk"
  VICTORY_POINTS_413:0 "Voronezh"
  VICTORY_POINTS_418:0 "Kharkiv"
- VICTORY_POINTS_957:0 "Urajio"
+ VICTORY_POINTS_957:0 "Vladivostok"
  VICTORY_POINTS_1278:0 "Ufa"
  VICTORY_POINTS_1459:0 "Tashkent"
  VICTORY_POINTS_1591:0 "Alma-Ata"
