Gui Fixing + Norway Cities
- Fixing State Resource Gui Again
- Added Norway Cities and Ports
Why?
Preperation for the Trollege

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -150,6 +150,15 @@
  VICTORY_POINTS_11380:0 "Norrköping"
  VICTORY_POINTS_11215:0 "Karlskrona"
  VICTORY_POINTS_6115:0 "Oslo"
+ VICTORY_POINTS_3021:0 "Hamar"
+ VICTORY_POINTS_9296:0 "Kristiansand"
+ VICTORY_POINTS_107:0 "Namsos"
+ VICTORY_POINTS_9127:0 "Ålesund"
+ VICTORY_POINTS_53:0 "Stavanger"
+ VICTORY_POINTS_11157:0 "Harstad"
+ VICTORY_POINTS_6071:0 "Bodø"
+ VICTORY_POINTS_11050:0 "Tromsø"
+ VICTORY_POINTS_9116:0 "Kirkenes"
  VICTORY_POINTS_192:0 "Narvik"
  VICTORY_POINTS_3022:0 "Trondheim"
  VICTORY_POINTS_122:0 "Bergen"
