i'm just going to dump this all here and work on it tomorrow

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -797,6 +797,15 @@
   PB_FRA_hunt_for_unions:0 "Hunt for Unions" 
   PB_FRA_Our_Promise_To_Keep:0 "Our Promise To Keep"
 
+  PB_FRA_the_new_european_system:0 "The New European System"
+  PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\nHon"
+  PB_FRA_the_land_of_albion:0 "The Land of Albion"
+  PB_FRA_invest_in_northern_england:0 "Invest in Northern England"
+  PB_FRA_invest_in_the_midlands:0 "Invest in the English Midlands"
+  PB_FRA_the_land_beyond_the_rhine:0 "The Land Beyond the Rhine"
+  PB_FRA_the_land_of_rome:0 "The Land of Rome"
+  PB_FRA_the_land_up_north:0 "The Land up North"
+
   ##########################
   # TOOLTIPS
   ##########################
@@ -846,6 +855,10 @@
   PB_FRA_HAN_SP:0 "The §YSP§! will be very pleased with this arrangement"
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
   PB_FRA_Greater_France_tt:0 "§YGreater France§! will be formed. What type of formable you get will depend on your political situation\n\n§OThis is the end of the French focus tree§!"
+
+  FRA_not_a_decision:0 "This is a decision"
+  FRA_control_north_england:0 "Collaborator England controls a piece of North England"
+  FRA_control_midlands_england:0 "Collaborator England controls a piece of North England"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
