--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -301,9 +301,19 @@
   ########################## 
   # TOOLTIPS
   ##########################
-
-  
-
+  RUS_alexei_twenty_tt:0 "§GAlexei's§!  influence will grow by 20."
+  RUS_alexei_and_kirill_five_tt:0 "§GAlexei§!  and  §gKirill's§!  influence will grow by 5."
+  RUS_alexandra_five_tt:0 "§OAlexandra's§!  influence will grow by 5."
+  RUS_alexei_ten_tt:0 "§GAlexei's§!  influence will grow by 10."
+  RUS_kirill_ten_tt:0 "§gKirill's§!  influence will grow by 10."
+  RUS_alexandra_ten_tt:0 "§OAlexandra's§!  influence will grow by 10."
+  RUS_alexei_five_tt:0 "§GAlexei's§!  influence will grow by 5."
+  RUS_kirill_five_tt:0 "§gKirill's§!  influence will grow by 5."
+  RUS_alexandra_twenty_tt:0 "§OAlexandra's§!  influence will grow by 20."
+  RUS_alexei_and_kirill_ten_tt:0 "§GAlexei§!  and  §gKirill's§!  influence will grow by 10."
+  RUS_alexei_decrease_tt:0 "§GAlexei's§!  influence will decrease by 5."
+  RUS_alexandra_and_kirill_five_tt:0 "§OAlexandra§!  and  §gKirill's§!  influence will grow by 5."
+  RUS_kirill_twenty_tt:0 "§gKirill's§!  influence will grow by 20."  
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
