French Generals and Naval oob for MTG
- I made the generals shadow background darker than it should be. Future Bernie can fix that.

--- a/localisation/PB_countries_l_english.yml
+++ b/localisation/PB_countries_l_english.yml
@@ -3825,8 +3825,8 @@ SAN_jc:0 "Sanghli State"
  HAN_cn_ADJ:0 "Hannoverian"
  HAN_an_ADJ:0 "Hannoverian"
  
- HAN_SP:0 "SP Hanovre"
- HAN_SP_DEF:0 "SP Hanovre"
+ HAN_SP:0 "SP Alemania"
+ HAN_SP_DEF:0 "SP Alemania"
  
 
  BOS_ni:0 "Bosnia"
@@ -7606,22 +7606,22 @@ SAN_jc:0 "Sanghli State"
  WEE_cn_ADJ:0 "German"
  WEE_an_ADJ:0 "German"
 
- HES_ni:0 "Administrative Zone Of Bavaria"
- HES_ni_DEF:0 "Administrative Zone Of Bavaria"
- HES_ds:0 "Administrative Zone Of Bavaria"
- HES_ds_DEF:0 "Administrative Zone Of Bavaria"
- HES_rc:0 "Administrative Zone Of Bavaria"
- HES_rc_DEF:0 "Administrative Zone Of Bavaria"
- HES_an:0 "Administrative Zone Of Bavaria"
- HES_an_DEF:0 "Administrative Zone Of Bavaria"
- HES_cn:0 "Administrative Zone Of Bavaria"
- HES_cn_DEF:0 "Administrative Zone Of Bavaria"
- HES_lb:0 "Administrative Zone Of Bavaria"
- HES_lb_DEF:0 "Administrative Zone Of Bavaria"
- HES_ss:0 "Administrative Zone Of Bavaria"
- HES_ss_DEF:0 "Administrative Zone Of Bavaria"
- HES_jc:0 "Administrative Zone Of Bavaria"
- HES_jc_DEF:0 "Administrative Zone Of Bavaria"
+ HES_ni:0 "Administrative Zone Of Southern Germany"
+ HES_ni_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_ds:0 "Administrative Zone Of Southern Germany"
+ HES_ds_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_rc:0 "Administrative Zone Of Southern Germany"
+ HES_rc_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_an:0 "Administrative Zone Of Southern Germany"
+ HES_an_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_cn:0 "Administrative Zone Of Southern Germany"
+ HES_cn_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_lb:0 "Administrative Zone Of Southern Germany"
+ HES_lb_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_ss:0 "Administrative Zone Of Southern Germany"
+ HES_ss_DEF:0 "Administrative Zone Of Southern Germany"
+ HES_jc:0 "Administrative Zone Of Southern Germany"
+ HES_jc_DEF:0 "Administrative Zone Of Southern Germany"
  HES_ni_ADJ:0 "German"
  HES_rc_ADJ:0 "German"
  HES_lb_ADJ:0 "German"
