we can now have negative stability and war support

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -291,7 +291,7 @@
   PB_RUS_the_black_hundreds_candidate_desc:0 ""
   PB_RUS_the_noble_candidate:0 "The Noble Candidate"
   PB_RUS_the_noble_candidate_desc:0 ""
-  PB_RUS_christ_has_our_backs:0 "The Trinity Protects Holy Russia"
+  PB_RUS_christ_has_our_backs:0 "Christ Protects Holy Russia"
   PB_RUS_christ_has_our_backs_desc:0 ""
   ########################## 
   # Decisions
