--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -800,11 +800,26 @@
   PB_FRA_the_new_european_system:0 "The New European System"
   PB_FRA_the_new_european_system_desc:0 "\n\n\n\n\n\nHon"
   PB_FRA_the_land_of_albion:0 "The Land of Albion"
-  PB_FRA_invest_in_northern_england:0 "Invest in Northern England"
-  PB_FRA_invest_in_the_midlands:0 "Invest in the English Midlands"
+  PB_FRA_invest_in_england:0 "Invest in England"
+  PB_FRA_invest_in_wales:0 "Invest in Wales"
+  PB_FRA_invest_in_scotland:0 "Invest in Scotland"
+  PB_FRA_invest_in_ireland:0 "Invest in Ireland"
+  PB_FRA_invest_in_cornwall:0 "Invest in Cornwall"
+  PB_FRA_invest_in_cornish_defences:0 "Invest in Cornish Defences"
+  PB_FRA_hunt_the_english_resistance:0 "Hunt the English Resistance"
   PB_FRA_the_land_beyond_the_rhine:0 "The Land Beyond the Rhine"
+  PB_FRA_invest_in_southern_germany:0 "Invest in Southern Germany"
+  PB_FRA_invest_in_westphalia:0 "Invest in Westphalia"
+  PB_FRA_invest_in_hanover:0 "Invest in Hanover"
+  PB_FRA_invest_in_austria:0 "Invest in Austria"
   PB_FRA_the_land_of_rome:0 "The Land of Rome"
+  PB_FRA_invest_in_italy:0 "Invest in Italy"
+  PB_FRA_invest_in_libya:0 "Invest in Libya"
+  PB_FRA_fortress_dalmatia:0 "Fortress Dalmatia"
   PB_FRA_the_land_up_north:0 "The Land up North"
+  PB_FRA_invest_in_denmark:0 "Invest in Denmark"
+  PB_FRA_invest_in_norway:0 "Invest in Norway"
+  PB_FRA_invest_in_sweden:0 "Invest in Sweden"
 
   ##########################
   # TOOLTIPS
@@ -856,9 +871,22 @@
   PB_FRA_HAN_MIL:0 "The §YMilitary§! will be very pleased with this arrangement"
   PB_FRA_Greater_France_tt:0 "§YGreater France§! will be formed. What type of formable you get will depend on your political situation\n\n§OThis is the end of the French focus tree§!"
 
-  FRA_not_a_decision:0 "This is a decision"
-  FRA_control_north_england:0 "Collaborator England controls a piece of North England"
-  FRA_control_midlands_england:0 "Collaborator England controls a piece of North England"
+  FRA_not_a_decision:0 "This is not a decision"
+  FRA_control_england:0 "Collaborator England controls a piece of England"
+  FRA_control_wales:0 "Collaborator Wales controls a piece of Wales"
+  FRA_control_scotland:0 "Collaborator Scotland controls a piece of Scotland"
+  FRA_control_cornwall:0 "Collaborator Cornwall controls a piece of Cornwall"
+  FRA_control_southern_germany:0 "Collaborator Bavaria controls a piece of Southern Germany"
+  FRA_control_westphalia:0 "Collaborator Westphalia controls a piece of Westphalia"
+  FRA_control_austria:0 "Collaborator Austria controls a piece of Austria"
+  FRA_control_hanover:0 "Collaborator Hanover controls a piece of Hanover"
+  FRA_control_italy:0 "Collaborator Italy controls a piece of Italy"
+  FRA_control_libya:0 "Collaborator Italy controls a piece of Libya"
+  FRA_control_dalmatia:0 "Collaborator Italy controls a piece of Dalmatia"
+  FRA_control_ireland:0 "Collaborator Ireland controls a piece of Ireland"
+  FRA_control_denmark:0 "Collaborator Denmark controls a piece of Denmark"
+  FRA_control_norway:0 "Collaborator Norway controls a piece of Norway"
+  FRA_control_sweden:0 "Collaborator Sweden controls a piece of Sweden"
 
   ##########################
   # FRENCH COLLABORATION IN GERMANY
