friendship ended with decisions now focus tree is my best friend

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -392,6 +392,15 @@
   FRA_renewed_naval_policy:0 "Renewed Naval Policy"
   FRA_france_rules_the_waves:0 "France Rules the Waves"
 
+  FRA_increasing_plane_production:0 "Increasing Plane Production"
+  FRA_pilot_ambition_program:0 "Pilot Ambition Program"
+  FRA_pilot_romanticisation:0 "Pilot Romanticisation"
+  FRA_the_best_pilots_of_europe:0 "The Best Pilots of Europe"
+  FRA_pilot_training_program:0 "Pilot Training Program"
+  FRA_waves_of_annihilation:0 "Waves of Annihilation"
+  FRA_roast_the_land:0 "Roast the Land"
+  FRA_barons_of_hell:0 "Barons of Hell"
+
   FRA_Swiss_Banks:0 "Swiss Banks"
 
   ##########################
