First part of the Riots

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -916,20 +916,20 @@
   britain.16.b:0 "The King refuses, and proposes a coalition government"
 
   britain.17.t:0 "The National Recovery Act"
-  britain.17.d:0 ""
+  britain.17.d:0 "The Government with a majority in Parliament have passed the National Recovery Act to Britain's relief. The act ensues that the British goverment would allocate large number of funds to public employment schemes whilst also implementing tax reform and new trade policies to easen the burden created by the Great Slump which will guarantee. This is but the first major act implemented by the new goverment to handle the crisis and certainly not the last to deal with the depression caused by the Great Slump."
   britain.17.a:0 "The Act is Passed"
 
   britain.18.t:0 "The National Recovery Act"
-  britain.18.d:0 ""
-  britain.18.a:0 "The Government cannot achieve a majority to pass the Act"
+  britain.18.d:0 "To everyones surprise and immense distress the British Government and her allies in the House of Commons have failed to pass the National Recovery Act. The Act which was promised in the goverment's manifesto and all rival parties manifestos have failed to pass the House of Commons.\n\nThe fallout from this disaster has already began to be felt; all across the country Trade Unions are calling for a general strike, protests from local governments have seen a standoff between the central government in London and regions in Britain. All that is known is that there is a storm coming. A storm that the ancient parliamentary political system of Britain might not survive the aftermath."
+  britain.18.a:0 "The Government have failed to act and now they have sown the wind"
 
   britain.19.t:0 "The TUC calls for a General Strike"
-  britain.19.d:0 ""
-  britain.19.a:0 "Don't Cross the Picket Line"
+  britain.19.d:0 "'Our goverment which we have so recently elected have immediately failed us and left us starving whilst they all sit content both at their estates and the talking shop of the world known as Parliament.'\n\nThere was an ear shattering roar of approval to Lee's speech from the masses gathered just below the speaker, all working men who had been mugged by their elected goverment.\n\nLee was one of them, a docker who had fought in the Great War and whose life was crushed under the depression of the Great Slump. Twenty years he had worked on these docks excluding the war and the goverment he thought that would help them instead ignored the millions of suffering men and women in Britain.\n\nNo longer would Lee and his fellow workers sit quiet and obedient to a goverment which damned them. Instead to the horror of goverment the TUC and all associated unions called a General Strike for all workers to protest against the goverments incompetence to make them held accounted for their betrayal to the public.\n\nAll that Lee could think of whilst he left the stage and joined the mass protest in East End was that finally his voice will be heard..."
+  britain.19.a:0 "Workers of Britain, unite!"
 
   britain.20.t:0 "Blood on the Streets"
-  britain.20.d:0 ""
-  britain.20.a:0 "Tell the Police to do their bloody jobs!"
+  britain.20.d:0 "'Police fuck off, Police fuck off' screamed the rioters in London and most likely the protesters all over the country.\n\nAfter the TUC called a General Strike the political situation for Britain went from already bad to worse. Officer Murdoch stood in line with his other police officers facing the rioters; truncheon in hand. To Murdoch's great sadness he was a veteran of the Great war facing the workers of Britain, many of them veterans alongside him forced to face each other due to desperation. Now he stood in line somewhere in the East End near Cable street ready to fight for a goverment which he personally didn't approve of; mainly in part of them failing to pass the National Recovery Act.\n\n'At the ready lads' his superior on horseback shouted to him and his comrades preparing his men for a row. Murdoch noted by now that the rioters were throwing bottles and some even had crow bars ready to break the thin blue line facing them. All of a sudden a battlecry went up and both police and rioters were charging each other into a chaotic melee. All Murdoch could do was watch in disbelief before joining into the frenzy, batton rising and falling as he knocked out rioter one by one."
+  britain.20.a:0 "The Battle of Cable street will forever go down in British history"
 
   britain.21.t:0 "Bread Riots in London"
   britain.21.d:0 ""
