German Stuff+ Some other stuff
-German Focuses, Evens, Ideas, Decisions
-Vietnamese Flavour
-some state thingies this and there

--- a/localisation/PB_Generic_Ideas_l_english.yml
+++ b/localisation/PB_Generic_Ideas_l_english.yml
@@ -8,3 +8,4 @@
 
   PB_Outback_Country:0 "Outback Country"
   PB_Cowboy_Country:0 "Untamed Country"
+  PB_Idea_VIN_Rebellion:0 "The War of Independence"
