--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -97,6 +97,8 @@
   PB_GER_Artillery_Streamlined:0 "Streamlined Artillery Production"
   PB_GER_Not_One_Step:0 "Special Order No. 227"
   PB_GER_Never_Again_Paris:0 "Never Another Paris"
+  PB_GER_anti_church:0 "An Insignificant Church"
+  PB_GER_Rearmament:0 "Rearmament"
 
   ##########################
   # FOCUSES
@@ -473,7 +475,11 @@
   germany.48.t:0 "Negotiations with the Czech Legion"
   germany.48.d:0 "The Region of Czechia has been become a region of rising unrest in the last decades. With rising nationalism in Europe it seems like the Czech People are more and more seeing themself as a seperate culture groups then us Germans. Despite being a part of the Holy Roman Empire for more then 600 Years the Czechs never truly became Germans and are now seeming to beginn a path of seperatism. Czech Language is spoken more in school, German Adminstrators are being replaced by young competent Czechs and so on. The biggest problem is however the Czech Legion.\n\The Czech Legion is the equivalent of the Freikorps Groups in other German Cities with the key difference that they are fighting against German Influence in Czechia. Harassment of German Citiziens, organizing strikes against German-Factories and even terrorism. However they are not a terrorism group truthfully and were able to inspire Czech Nationalism in their region due the neglience of the old Government.\n\Despit Army Commanders and a majority of politicians advocating of an violent purge of this group, the Thalmann wants to avoid spilling more blood in Germany and fears it could lead to more radical terrorism. The Government has arranged a meeting with the most prominent leaders of the Czech Legion, led by Josef Šnejdárek. He seems to be aware that a rebellion against Germany will likely not be sucessful and rather demands more autonomy for the Czech inside the United Kingdoms. However the demands he has are hard to accept as they severly restrict German Centralization over the Region and reduce German Buisnesses."
   germany.48.a:0 "Concessions for Unity need to be made."
-  germany.48.b:0 "Just accept that you are Germans."
+  germany.48.b:0 "For Gods Sake, just accept that you are Germans."
+
+  germany.49.t:0 "The Czech Legion Falls"
+  germany.49.d:0 ""
+  germany.49.a:0 "Let us hope they learned their lesson"
 
   ##########################
   # DECISIONS
@@ -572,6 +578,7 @@
   czech_agitation:0 "Czech Unrest"
   semi_autonomous_state:0 "Autonomous State"
   french_terrorism:0 "The Alsace National Union Party"
+  french_terrorism_2:0 "The Alsace National Union Party"
 
   ##########################
   # COSMETIC TAGS
