--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -13,6 +13,7 @@
  VICTORY_POINTS_3522:0 "Magdeburg"
  VICTORY_POINTS_3535:0 "Leipzig"
  VICTORY_POINTS_6282:0 "Stettin"
+ VICTORY_POINTS_11372:0 "Köslin"
  VICTORY_POINTS_6332:0 "Königsberg"
  VICTORY_POINTS_6377:0 "Hannover"
  VICTORY_POINTS_6389:0 "Kiel"
