More Germany Stuff
-Focuses, Events, Ideas you know the drill
- Some Special GFX, Idea Icon, Event Picture

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -99,6 +99,7 @@
   PB_GER_Never_Again_Paris:0 "Never Another Paris"
   PB_GER_anti_church:0 "An Insignificant Church"
   PB_GER_Rearmament:0 "Rearmament"
+  PB_GER_Philip_Compensation:0 "Philippines Self Governing Support"
 
   ##########################
   # FOCUSES
@@ -480,6 +481,19 @@
   germany.49.t:0 "The Czech Legion Falls"
   germany.49.d:0 ""
   germany.49.a:0 "Let us hope they learned their lesson"
+
+  germany.50.t:0 "Decolonizing the Philippines"
+  germany.50.d:0 ""
+  germany.50.a:0 "We can not afford these costs in these times."
+  germany.50.b:0 "We have a responsibility as a Civilized Nation."
+
+  germany.51.t:0 "Leaving the Philippines - Birth of a Free Nation"
+  germany.51.d:0 ""
+  germany.51.a:0 "Tschüss und viel Glück!"
+
+  germany.52.t:0 "Leaving the Philippines - Birth of a Free Nation"
+  germany.52.d:0 ""
+  germany.52.a:0 "Believe in Fu"
 
   ##########################
   # DECISIONS
